--- a/PopTrack.xcodeproj/xcshareddata/xcschemes/PopTrack.xcscheme
+++ b/PopTrack.xcodeproj/xcshareddata/xcschemes/PopTrack.xcscheme
@@ -44,7 +44,7 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
       useCustomWorkingDirectory = "YES"
-      customWorkingDirectory = "/Volumes/Code/PopTrack"
+      customWorkingDirectory = "/Volumes/Code/PopTrack/Data"
       buildConfiguration = "Debug"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
