--- a/src/PopEngineAppBundle.xcconfig
+++ b/src/PopEngineAppBundle.xcconfig
@@ -1,5 +1,5 @@
 //	config for OSX bundle apps
-#include "PopApp.xcconfig"
+//#include "PopApp.xcconfig"
 
 
 GCC_PREPROCESSOR_DEFINITIONS = $(inherited) TARGET_OSX_BUNDLE
