fixed rendering! (Attrib array size was 2, wrong!)
Former-commit-id: 84a239120f7346df7a38b330f08def0b05d7a81f

--- a/src/PopEngineAppBundle.xcconfig
+++ b/src/PopEngineAppBundle.xcconfig
@@ -2,7 +2,7 @@
 //#include "PopApp.xcconfig"
 
 
-GCC_PREPROCESSOR_DEFINITIONS = $(inherited) TARGET_OSX_BUNDLE
+GCC_PREPROCESSOR_DEFINITIONS = $(inherited) TARGET_OSX_BUNDLE ENABLE_OPENGL
 INFOPLIST_FILE = $(SRCROOT)/Info.plist
 
 HEADER_SEARCH_PATHS = $(HEADER_SEARCH_PATHS) $(inherited) $(V8_PATH)
