dlib is detecting faces!
Former-commit-id: 1b890d8ade830550458348e36e9cbb85fc4437ad

--- a/src/PopEngineAppBundle.xcconfig
+++ b/src/PopEngineAppBundle.xcconfig
@@ -5,6 +5,6 @@
 GCC_PREPROCESSOR_DEFINITIONS = $(inherited) TARGET_OSX_BUNDLE ENABLE_OPENGL
 INFOPLIST_FILE = $(SRCROOT)/Info.plist
 
-HEADER_SEARCH_PATHS = $(HEADER_SEARCH_PATHS) $(inherited) $(V8_PATH) $(V8_PATH)/include
-LIBRARY_SEARCH_PATHS = $(LIBRARY_SEARCH_PATHS) $(inherited) $(V8_PATH)/lib
+HEADER_SEARCH_PATHS = $(HEADER_SEARCH_PATHS) $(inherited) $(V8_PATH) $(V8_PATH)/include $(DLIB_PATH)/include
+LIBRARY_SEARCH_PATHS = $(LIBRARY_SEARCH_PATHS) $(inherited) $(V8_PATH)/lib $(DLIB_PATH)/lib
 
