--- a/PopTrack.xcodeproj/xcshareddata/xcschemes/PopTrack.xcscheme
+++ b/PopTrack.xcodeproj/xcshareddata/xcschemes/PopTrack.xcscheme
@@ -46,7 +46,7 @@
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
-      useCustomWorkingDirectory = "YES"
+      useCustomWorkingDirectory = "NO"
       customWorkingDirectory = "$PROJECT_DIR/"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
