Adding soydecklink submodule
Former-commit-id: 9778873318f56d3e8dc6585861114c87a5e4fa52

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "src/SoyLib"]
 	path = src/SoyLib
 	url = https://github.com/SoylentGraham/SoyLib.git
+[submodule "src/SoyDecklink"]
+	path = src/SoyDecklink
+	url = https://github.com/SoylentGraham/SoyDecklink.git
