Added the holosports web app as data submodule
Former-commit-id: 104b6577f73740e4de96b175461a484cc142668d

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "src/SoyDecklink"]
 	path = src/SoyDecklink
 	url = https://github.com/SoylentGraham/SoyDecklink.git
+[submodule "Data_Holosports"]
+	path = Data_Holosports
+	url = https://gitlab.com/NewChromantics/PopFragGui.git
