--- a/src/PopEngineAppBundle.xcconfig
+++ b/src/PopEngineAppBundle.xcconfig
@@ -5,8 +5,8 @@
 GCC_PREPROCESSOR_DEFINITIONS = $(inherited) TARGET_OSX_BUNDLE ENABLE_OPENGL
 INFOPLIST_FILE = $(SRCROOT)/Info.plist
 
-
 V8_PATH = $(SRCROOT)/src/v8
-HEADER_SEARCH_PATHS = $(HEADER_SEARCH_PATHS) $(inherited) $(V8_PATH) $(V8_PATH)/include $(DLIB_PATH)/include
+BROADWAY_PATH = $(SRCROOT)/src/Broadway/Decoder
+HEADER_SEARCH_PATHS = $(HEADER_SEARCH_PATHS) $(inherited) $(V8_PATH) $(V8_PATH)/include $(DLIB_PATH)/include $(BROADWAY_PATH)/inc
 LIBRARY_SEARCH_PATHS = $(LIBRARY_SEARCH_PATHS) $(inherited) $(V8_PATH)/lib $(DLIB_PATH)/lib
 
