Fixed new broadway locations
Former-commit-id: 4f0232f5b0f1645d96b0d82667972537cc46d50e

--- a/src/PopEngineAppBundle.xcconfig
+++ b/src/PopEngineAppBundle.xcconfig
@@ -6,7 +6,7 @@ GCC_PREPROCESSOR_DEFINITIONS = $(inherited) TARGET_OSX_BUNDLE ENABLE_OPENGL
 INFOPLIST_FILE = $(SRCROOT)/Info.plist
 
 V8_PATH = $(SRCROOT)/src/v8
-BROADWAY_PATH = $(SRCROOT)/src/Broadway/Decoder
+BROADWAY_PATH = $(SRCROOT)/src/SoyBroadway/Broadway/Decoder
 HEADER_SEARCH_PATHS = $(HEADER_SEARCH_PATHS) $(inherited) $(V8_PATH) $(V8_PATH)/include $(DLIB_PATH)/include $(BROADWAY_PATH)/inc
 LIBRARY_SEARCH_PATHS = $(LIBRARY_SEARCH_PATHS) $(inherited) $(V8_PATH)/lib $(DLIB_PATH)/lib
 
