Turned off ambigious macro warning, not a problem, just xcode intellicode assuming there is :/
Former-commit-id: 0afca0acb64f3054be0f9386e4ec5397a1658fad

--- a/src/PopEngineAppBundle.xcconfig
+++ b/src/PopEngineAppBundle.xcconfig
@@ -10,3 +10,4 @@ BROADWAY_PATH = $(SRCROOT)/src/SoyBroadway/Broadway/Decoder
 HEADER_SEARCH_PATHS = $(HEADER_SEARCH_PATHS) $(inherited) $(V8_PATH) $(V8_PATH)/include $(DLIB_PATH)/include $(BROADWAY_PATH)/inc
 LIBRARY_SEARCH_PATHS = $(LIBRARY_SEARCH_PATHS) $(inherited) $(V8_PATH)/lib $(DLIB_PATH)/lib
 
+OTHER_CFLAGS = -Wno-ambiguous-macro
