Added ezsift submodule
Former-commit-id: 529364c9b68c5d8f10b10cc9dd06ed5996a2702d

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "Data_Holosports"]
 	path = Data_Holosports
 	url = https://gitlab.com/NewChromantics/PopFragGui.git
+[submodule "src/Ezsift"]
+	path = src/Ezsift
+	url = https://github.com/SoylentGraham/ezSIFT.git
