Changed icon to icns from https://www.deviantart.com/gabrielfam/art/Lollypop-Icon-167883009
Former-commit-id: 2b3c074c58a1c65e622c6abeda4e69f5d2145211

--- a/Info.plist
+++ b/Info.plist
@@ -26,6 +26,8 @@
 	<string>Copyright © 2015 NewChromantics. All rights reserved.</string>
 	<key>NSMainNibFile</key>
 	<string>PopTrack</string>
+	<key>CFBundleIconFile</key>
+	<string>Lollypop.icns</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
 </dict>
