Engine can now boot from path provided as arg
Former-commit-id: 6b1d7f10d93a06a2726f1941a62529753f06960c

--- a/PopTrack.xcodeproj/xcshareddata/xcschemes/PopTrack.xcscheme
+++ b/PopTrack.xcodeproj/xcshareddata/xcschemes/PopTrack.xcscheme
@@ -63,6 +63,12 @@
             ReferencedContainer = "container:PopTrack.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "/Volumes/Code/TrainStop"
+            isEnabled = "YES">
+         </CommandLineArgument>
+      </CommandLineArguments>
       <EnvironmentVariables>
          <EnvironmentVariable
             key = "MALLOC_PERMIT_INSANE_REQUESTS"
