Added initial setup of HIDAPI to enum devices
Former-commit-id: ecdfefcfa5e67eab2a6af87dfad42c3a7721156c

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "src/Ezsift"]
 	path = src/Ezsift
 	url = https://github.com/SoylentGraham/ezSIFT.git
+[submodule "src/HidApi"]
+	path = src/HidApi
+	url = https://github.com/signal11/hidapi.git
