Using Guildhall project
Former-commit-id: c0b13521805cf97755d2dea075cb6008c5d3a008

--- a/PopTrack.xcodeproj/xcshareddata/xcschemes/PopTrack.xcscheme
+++ b/PopTrack.xcodeproj/xcshareddata/xcschemes/PopTrack.xcscheme
@@ -65,6 +65,10 @@
       </BuildableProductRunnable>
       <CommandLineArguments>
          <CommandLineArgument
+            argument = "/Volumes/Code/GuildhallGildwall"
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
             argument = "/Volumes/Code/TrainStop"
             isEnabled = "YES">
          </CommandLineArgument>
@@ -77,6 +81,11 @@
          </EnvironmentVariable>
       </EnvironmentVariables>
       <AdditionalOptions>
+         <AdditionalOption
+            key = "MallocScribble"
+            value = ""
+            isEnabled = "YES">
+         </AdditionalOption>
       </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
