More windows compile fixes
Former-commit-id: 0ed17627af3e6e206fde5c5bc8d8c24d5c5795d1

--- a/PopEngine.visualstudio/PopEngine.vcxproj
+++ b/PopEngine.visualstudio/PopEngine.vcxproj
@@ -47,6 +47,8 @@
     <ClInclude Include="..\src\SoyLib\src\BufferArray.hpp" />
     <ClInclude Include="..\src\SoyLib\src\HeapArray.hpp" />
     <ClInclude Include="..\src\SoyLib\src\MemHeap.hpp" />
+    <ClInclude Include="..\src\SoyLib\src\SoyGraphics.h" />
+    <ClInclude Include="..\src\SoyLib\src\SoyHttp.h" />
     <ClInclude Include="..\src\SoyLib\src\SoyOpengl.h" />
     <ClInclude Include="..\src\SoyLib\src\SoyOpenglContext.h" />
     <ClInclude Include="..\src\SoyLib\src\SoyPixels.h" />
@@ -59,6 +61,7 @@
     <ClInclude Include="..\src\SoyLib\src\SoyTypes.h" />
     <ClInclude Include="..\src\SoyLib\src\SoyTypes_Windows.h" />
     <ClInclude Include="..\src\SoyLib\src\SoyUniform.h" />
+    <ClInclude Include="..\src\SoyLib\src\SoyWebSocket.h" />
     <ClInclude Include="..\src\SoyOpenglView.h" />
     <ClInclude Include="..\src\SoyOpenglWindow.h" />
     <ClInclude Include="..\src\TApiBluetooth.h">
@@ -188,6 +191,8 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Master|x64'">true</ExcludedFromBuild>
     </ClCompile>
     <ClCompile Include="..\src\SoyLib\src\memheap.cpp" />
+    <ClCompile Include="..\src\SoyLib\src\SoyGraphics.cpp" />
+    <ClCompile Include="..\src\SoyLib\src\SoyHttp.cpp" />
     <ClCompile Include="..\src\SoyLib\src\SoyOpengl.cpp" />
     <ClCompile Include="..\src\SoyLib\src\SoyOpenglContext.cpp" />
     <ClCompile Include="..\src\SoyLib\src\SoyPixels.cpp" />
@@ -199,6 +204,8 @@
     <ClCompile Include="..\src\SoyLib\src\SoyTime.cpp" />
     <ClCompile Include="..\src\SoyLib\src\SoyTypes.cpp" />
     <ClCompile Include="..\src\SoyLib\src\SoyUniform.cpp" />
+    <ClCompile Include="..\src\SoyLib\src\SoyWebSocket.cpp" />
+    <ClCompile Include="..\src\SoyOpenglWindow.cpp" />
     <ClCompile Include="..\src\TApiBluetooth.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Master|Win32'">true</ExcludedFromBuild>
