Ignore visual studio temp files
Former-commit-id: c8dc747b2482be71a0800db7851c46082a7b2acd

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,12 @@ xcuserdata
 xcuserdata/**/*
 *.xccheckout
 
+
+# visual studio temp files
+*.db
+*.opendb
+*.visualstudio/x64/
+
 # unity
 StreamingAssets/
 Plugins/
